--- a/day9/JavaApplication4/android/app/src/main/res/values/strings.xml
+++ b/day9/JavaApplication4/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">Basic Calculator(V1.4)</string>
+    <string name="app_name">Basic Calculator</string>
+    <string name="title_activity_splash_screen">SplashScreen</string>
 </resources>
